--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./src/assets/images/logo.png" type="image/x-icon">
+    <link
+  rel="preload"
+  as="image"
+  href="/assets/images/fon3.webp"
+/>
+
     <title>dom-matrasov</title>
   </head>
   <body>
